[gd_scene load_steps=6 format=3 uid="uid://dwpo2m3hd3ekw"]

[ext_resource type="Texture2D" uid="uid://bbyoboyy756l3" path="res://assets/icons/music_off.svg" id="1_5d2l8"]
[ext_resource type="Script" uid="uid://4m3k5j8fy8bg" path="res://scenes/pause_menu.gd" id="1_7l7mv"]
[ext_resource type="Texture2D" uid="uid://cgeuk7resgh73" path="res://assets/icons/music_on.svg" id="2_7l7mv"]
[ext_resource type="Texture2D" uid="uid://djgy2hjenbk6u" path="res://assets/icons/sound_off.svg" id="3_v4r4p"]
[ext_resource type="Texture2D" uid="uid://buvpun6kie12t" path="res://assets/icons/sound_on.svg" id="4_1s2dm"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7l7mv")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 54.0
grow_horizontal = 2
text = "Paused"

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -63.0
offset_right = 103.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Continue" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Continue"

[node name="MainMenu" type="Button" parent="MainButtons"]
layout_mode = 2
text = "Main Menu"

[node name="SoundButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -52.0
grow_horizontal = 0
grow_vertical = 0

[node name="ToggleMusic" type="CheckButton" parent="SoundButtons"]
layout_mode = 2
theme_override_icons/checked = ExtResource("1_5d2l8")
theme_override_icons/unchecked = ExtResource("2_7l7mv")
alignment = 2

[node name="ToggleSFX" type="CheckButton" parent="SoundButtons"]
layout_mode = 2
theme_override_icons/checked = ExtResource("3_v4r4p")
theme_override_icons/unchecked = ExtResource("4_1s2dm")
alignment = 2
